Personnalisation de la page d'accueil Task #6 - Personnalisation de la page d'accueil

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
   <head>
     <!-- Required meta tags -->
+    <link href="../css/cv.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/fontawesome.min.css"
  rel="stylesheet">
     <link rel="icon" href="favicon.ico">
@@ -72,7 +73,20 @@
  </div>
  </nav>
 
-
+<div class="jumbotron">
+ <div class="container">
+ <div class="row cadre cv">
+ <div id="cv-entete" class="text-center">
+ <div id="cv-photo">
+ <img src="../images/AmeliaPilou.jpg" alt="Ma photo d'identité">
+ </div>
+ <div id="cv-intro">
+ <h1>Bonjour, je m'appelle Amélia et voici mon CV</h1>
+ </div>
+ </div>
+ </div>
+ </div>
+ </div>
     <h1>Bonjour et bienvenue sur mon portfolio !</h1>
     <div class="jumbotron"></div> <!-- Emplacement pour le contenu principal de la page -->
  <footer>
